# mmoment

./: .anchorignore  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  PHASE3_JETSON_PRIVACY_ARCHITECTURE.md  PIPE_ACCOUNT_INFO.md  PIPE_API_FACTS.md  README.md  WebRTC_Integration.md  check-pipe-storage.js  client.js  convert-key.js  package.json  pipe-file-browser.html  verify.js
.cursor/rules/: package-manager.mdc
app/backend/: .gitignore  cli-test.txt  package.json  railway.toml  test-fresh-upload.txt
app/backend/firestarter-sdk/src/: index.ts  upload-history.ts  user-manager.ts
app/backend/src/: database.ts  gas-sponsorship.ts  idl.json  idl.ts  index-safe.ts  index.ts  session-cleanup-cron.ts  sui-storage.ts  test-filebase-upload.ts  test-filebase.ts  test-media-routes.ts  test-service.ts  types.ts  walrus-upload.ts
app/backend/src/routes/: media.routes.ts
app/backend/src/services/: filebase.service.ts
app/backend/src/types/: tweetnacl-sealedbox-js.d.ts
app/orin_nano/: .env.example  .gitignore  NATIVE_CONTAINER_MIGRATION_PLAN.md  README.md  SECURITY_CLEANUP.md  SERVICES 2.md  deploy 2.sh  docker-compose 2.yml  docker-compose.test.yml  docker-compose.yml  install_services.sh  pipe_integration.py  setup_env_vars.sh  start_camera_system 2.sh  start_camera_system.sh  switch_backend.sh  verify_depin_signing.py
app/orin_nano/apps/: base_competition_app.py
app/orin_nano/apps/basketball/: basketball_app.py
app/orin_nano/apps/pushup/: __init__.py  app.py  pushup_app.py  routes.py
app/orin_nano/apps/sdk/: __init__.py  base_app.py
app/orin_nano/archive/: setup.py  start_services.sh
app/orin_nano/archive/scripts/: cleanup_media.sh
app/orin_nano/archive/systemd/: camera-service.service  cloudflared-compat.service  media-cleanup.service  (+2 more)
app/orin_nano/camera_service/: __init__.py  api.py  app.py  camera.py  config.py  direct_test.html  face_recognition_handler.py  gestures.py  main.py  recording.py  routes.py  run.py  session.py  setup.sh
app/orin_nano/camera_service_new/: API_ENDPOINTS.md  README.md  camera-service.service  fix_facenet_model.py  main.py  regenerate_models.py  routes.py  test_api_endpoints.py  test_face_recognition.py  test_facenet.py
app/orin_nano/cv_dev/: README.md  __init__.py  routes.py  video_buffer_service.py
app/orin_nano/docs/: API_ENDPOINTS.md  ARCHITECTURE.md  FRONTEND_INTEGRATION.md  HARDWARE.md  IDENTITY_REDESIGN.md  MEDIA_MANAGEMENT.md  STANDARDIZED_API.md  SYSTEM_SETUP.md
app/orin_nano/frontend_bridge/: api_test.html  frontend_bridge.py  local_test.html  new_api_test.html  test_stream.html
app/orin_nano/native/: .gitignore  CMakeLists.txt  Dockerfile  install-service.sh  native-camera-server.service
app/orin_nano/native/include/: byte_tracker.h  insightface_engine.h  native_pipeline_api.h  reid_engine.h  tensorrt_engine.h
app/orin_nano/native/scripts/: download_osnet.sh  export_osnet.py
app/orin_nano/native/src/: byte_tracker.cpp  insightface_engine.cpp  native_camera_server.cpp  native_pipeline_api.cpp  preprocess.cu  reid_engine.cpp  tensorrt_engine.cpp  test_arcface.cpp  test_camera.cpp  test_full_pipeline.cpp  test_inference.cpp  test_trt_simple.cpp
app/orin_nano/solana_middleware/: solana_middleware.py
app/orin_nano/systemd/: camera-service.service  frontend-bridge.service  solana-middleware.service
app/raspberry_pi/: camera-api.service  camera_api.py  cloudflare-tunnel.service  nfc_controller.py  solana-middleware.service
app/raspberry_pi/cloudflare-tunnel/: README.md  cloudflare-tunnel.service  restore.sh  setup.sh
app/raspberry_pi/new-camera-service/: camera.service  setup.py  solana_setup.py  wsgi.py
app/raspberry_pi/solana-middleware/: README.md  middleware.py  requirements.txt  setup.sh  solana-middleware.service  start.sh
app/web/: .gitignore  README.md  check_pins.js  cleanup.js  cleanup_specific.js  direct_initialize.cjs  get_pda.cjs  index.html  package-lock.json  package.json  pinata.env 2.example  simple_initialize.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
app/web/src/: App.tsx  MainContent.tsx  README.md  config.ts  index.css  main 2.tsx  main.tsx
camera-network/: Anchor.toml  Cargo.toml  README.md  package.json  test-wallet.json  typescript
camera-network/scripts/: client-example.ts  client.ts  deploy-and-test.sh  deploy-program.ts  local-test.ts
camera-network/tests/: camera-network-test.ts
docs/: FACE_REID_UPGRADE_PLAN.md  WALRUS_MIGRATION_PLAN.md
mcp/: README.md  SETUP.md
mcp/server/: mcp_server.py  requirements.txt
mcp/server/tools/: docker_tools.py  jetson_tools.py  project_tools.py
pipe-sdk/: Cargo.toml  README.md  test_pipe_endpoints.sh
pipe-sdk-simple/src/: lib.rs
pipe-sdk/cli-wrapper/: Cargo.toml  README.md
pipe-sdk/cli-wrapper/examples/: mmoment_integration.rs
pipe-sdk/examples/: mmoment_flow.rs  test_basic.rs  test_encryption.rs  test_real_api.rs
pipe-sdk/js/: MediaGallery.tsx  pipe-sdk-browser.js
pipe-sdk/src/: client.rs  crypto.rs  error.rs  lib.rs  session.rs  storage.rs  types.rs
programs/: KEYPAIR_SETUP.md
programs/camera-activation/: Cargo.toml
programs/camera-activation/src/: lib.rs
programs/camera-network/: Cargo.toml
programs/camera-network/src/: error.rs  lib.rs  state.rs
programs/competition-escrow/: Cargo.toml
programs/competition-escrow/src/: error.rs  lib.rs  state.rs
programs/competition-escrow/src/instructions/: cancel_competition.rs  create_competition.rs  decline_competition.rs  join_competition.rs  mod.rs  settle_competition.rs  start_competition.rs
programs/gamified-growth/: TOKENOMICS_CONCEPT.md
programs/my_solana_project/: Cargo.toml
programs/my_solana_project/src/: error.rs  lib.rs  state.rs
scripts/: camera-network-client.js  camera-network-minimal.js  debug-face-recognition.js  face-recognition-checkin.js  face-recognition-test.js  verify-camera-program.js
tests/: camera-activation.ts  camera-test.ts  check-in-basic-test.ts  check-in-client.ts  check-in-test.ts  face-id-test.ts  simple-checkin.ts  simple-client.ts  simple-test.ts
(+362 files in other folders)
