[workspace]

[package]
name = "pipe-api-sdk"
version = "0.1.0"
edition = "2021"
authors = ["MMOMENT Contributors"]
description = "Pipe Network API SDK - Multi-user storage for camera networks"
repository = "https://github.com/pipe-network/pipe-sdk"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
reqwest = { version = "=0.11.18", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption (simplified to avoid dependency hell)
ring = "0.16"  # For crypto operations
base64 = "0.21"
rand = "0.8"

# Session management
dashmap = "5.5"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.4", features = ["v4", "serde"] }
sha2 = "0.10"
futures = "0.3"
bytes = "1.5"
chrono = "0.4"
dirs = "5.0"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "Headers",
    "FormData",
    "Blob",
    "File",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "getrandom"]

[dev-dependencies]
tokio-test = "0.4"
