[workspace]

[package]
name = "pipe-sdk-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
blake3 = "1.5"
sha2 = "0.10"
