[package]
name = "camera_activation"
version = "0.1.0"
description = "Camera registry for mmoment project"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "camera_activation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"