[package]
name = "competition-escrow"
version = "0.1.0"
description = "Solana escrow program for spontaneous IRL competitions with pool/sponsored funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "competition_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
